# evov3

./: .gitmodules  CMakeLists.txt  README.md  ReleaseNotes.txt
src/: CMakeLists.txt  CryptoNoteConfig.h  contrib.hpp  version.h.in
src/Mnemonics/: electrum-words.cpp
src/Serialization/: BinaryInputStreamSerializer.cpp  KVBinaryInputStreamSerializer.cpp  SerializationOverloads.h
src/base/: CryptoNoteBasic.h  CryptoNoteBasicImpl.cpp  CryptoNoteBasicImpl.h  CryptoNoteFormatUtils.cpp  CryptoNoteFormatUtils.h  CryptoNoteSerialization.cpp  CryptoNoteSerialization.h
src/blockchain_explorer/: BlockchainExplorer.cpp  BlockchainExplorer.h  BlockchainExplorerDataBuilder.cpp  BlockchainExplorerDataBuilder.h  BlockchainExplorerErrors.h
src/common/: Base58.cpp  ConsoleHandler.cpp  ConsoleHandler.h  ConsoleTools.cpp  FileMappedVector.h  JsonValue.cpp  JsonValue.h  MemoryInputStream.cpp  PathTools.cpp  ScopeExit.cpp  SignalHandler.cpp  StdInputStream.cpp  StdOutputStream.cpp  StreamTools.cpp  StreamTools.h  StringInputStream.cpp  StringOutputStream.cpp  StringTools.cpp  StringTools.h  StringView.cpp  Util.cpp  VectorOutputStream.cpp
src/core/: Account.cpp  Account.h  Checkpoints.cpp  Checkpoints.h  Core.cpp  Core.h  CoreConfig.cpp  CoreConfig.h  Currency.cpp  Currency.h  Difficulty.cpp  MessageQueue.h  UpgradeDetector.cpp  UpgradeDetector.h
src/crypto/: chacha8.c  crypto.cpp  hash-ops.h  skein_port.h  slow-hash.c
src/daemon/: Daemon.cpp  DaemonCommandsHandler.cpp  DaemonCommandsHandler.h
src/http/: HttpParser.cpp  HttpRequest.h  HttpResponse.cpp  HttpResponse.h
src/json/: JsonRpcServer.cpp  JsonRpcServer.h
src/log/: CommonLogger.cpp  ConsoleLogger.cpp  FileLogger.cpp  LoggerGroup.cpp  LoggerManager.cpp  LoggerMessage.cpp  LoggerMessage.h  LoggerRef.cpp  LoggerRef.h  StreamLogger.cpp
src/miner/: MinerManager.cpp
src/node_rpc_proxy/: NodeRpcProxy.cpp  NodeRpcProxy.h
src/p2p/: NetNode.cpp  NetNode.h  P2pNetworks.h  P2pNode.cpp  P2pNodeConfig.cpp  P2pProtocolTypes.h
src/payment_gate/: NodeFactory.cpp  PaymentServiceJsonRpcMessages.cpp  PaymentServiceJsonRpcMessages.h  PaymentServiceJsonRpcServer.cpp  PaymentServiceJsonRpcServer.h  WalletService.cpp  WalletService.h
src/payment_gate_services/: ConfigurationManager.cpp  PaymentGateService.cpp  PaymentGateService.h  PaymentServiceConfiguration.cpp  PaymentServiceConfiguration.h  RpcNodeConfiguration.cpp  main.cpp
src/procnode/: InProcessNode.cpp  InProcessNode.h
src/protocol/: CryptoNoteProtocolHandler.cpp  CryptoNoteProtocolHandler.h
src/rpc/: CoreRpcServerCommandsDefinitions.h  HttpServer.cpp  HttpServer.h  RpcServer.cpp  RpcServer.h  RpcServerConfig.cpp
src/seria/: ILogger.cpp
src/simple_wallet/: PasswordContainer.cpp  PasswordContainer.h  SimpleWallet.cpp  SimpleWallet.h
src/transfers/: BlockchainSynchronizer.cpp  BlockchainSynchronizer.h  TransfersConsumer.cpp  TransfersContainer.cpp  TransfersContainer.h  TransfersSubscription.cpp  TransfersSynchronizer.cpp  TransfersSynchronizer.h
src/wallet/: WalletErrors.h  WalletGreen.cpp  WalletGreen.h  WalletRpcServer.cpp  WalletRpcServer.h  WalletRpcServerCommandsDefinitions.h  WalletSerializationV1.cpp  WalletSerializationV1.h  WalletSerializationV2.cpp  WalletSerializationV2.h
src/wallet_legacy/: WalletHelper.cpp  WalletHelper.h  WalletLegacy.cpp  WalletLegacy.h  WalletLegacyEvent.h  WalletLegacySerialization.cpp  WalletLegacySerialization.h  WalletLegacySerializer.cpp  WalletRequest.h  WalletSendTransactionContext.h  WalletTransactionSender.cpp  WalletTransactionSender.h  (+4 more)
(+40 files in other folders)
